--- a/client/src/app/modules/quotation/components/add-affaire/add-affaire.component.html
+++ b/client/src/app/modules/quotation/components/add-affaire/add-affaire.component.html
@@ -88,7 +88,7 @@
   </table>
   <table class="full-width" *ngIf="editMode">
     <tr>
-      <td class="color-warn" *ngIf="isLabelAffaire">La facture est à adresser à l'affaire, pensez à renseinger un mail
+      <td class="color-warn" *ngIf="isLabelAffaire">La facture est à adresser à l'affaire, pensez à renseigner un mail
       </td>
     </tr>
   </table>
@@ -114,7 +114,7 @@
   </table>
   <table class="full-width" *ngIf="editMode">
     <tr>
-      <td class="color-warn" *ngIf="isLabelAffaire">La facture est à adresser à l'affaire, pensez à renseinger
+      <td class="color-warn" *ngIf="isLabelAffaire">Le remboursement est à effectuer à l'affaire, pensez à renseigner
         l'IBAN/BIC</td>
     </tr>
   </table>
