--- a/client/src/app/modules/quotation/components/provision-item/provision-item.component.html
+++ b/client/src/app/modules/quotation/components/provision-item/provision-item.component.html
@@ -1,4 +1,4 @@
-<table class="full-width" [formGroup]="provisionItemForm">
+<table class="full-width" [formGroup]="provisionItemForm" *ngIf="provision">
   <tr>
     <td>
       <select-provision-family (selectionChange)="changeProvisionType()" [(model)]="provision.provisionFamilyType"
@@ -23,22 +23,22 @@
 </table>
 <domiciliation [domiciliation]="provision.domiciliation" [editMode]="editMode" [isStatusOpen]="isStatusOpen"
   [instanceOfCustomerOrder]="instanceOfCustomerOrder" [(provision)]="provision" (provisionChange)="noticeChange()"
-  *ngIf="provision.domiciliation && provision.provisionType &&  provision.provisionType.provisionScreenType.code==PROVISION_SCREEN_TYPE_DOMICILIATION">
+  *ngIf="provision && provision.domiciliation && provision.provisionType &&  provision.provisionType.provisionScreenType.code==PROVISION_SCREEN_TYPE_DOMICILIATION">
 </domiciliation>
 <announcement [announcement]="provision.announcement" [editMode]="editMode" [(provision)]="provision"
   [instanceOfCustomerOrder]="instanceOfCustomerOrder" [isStatusOpen]="isStatusOpen" (provisionChange)="noticeChange()"
-  *ngIf="provision.announcement && provision.provisionType && provision.provisionType.provisionScreenType.code==PROVISION_SCREEN_TYPE_ANNOUNCEMENT">
+  *ngIf="provision && provision.announcement && provision.provisionType && provision.provisionType.provisionScreenType.code==PROVISION_SCREEN_TYPE_ANNOUNCEMENT">
   [affaire]="affaire">
 </announcement>
 <bodacc-main [bodacc]="provision.bodacc" [affaire]="affaire" [editMode]="editMode" [isStatusOpen]="isStatusOpen"
   [instanceOfCustomerOrder]="instanceOfCustomerOrder" [(provision)]="provision" (provisionChange)="noticeChange()"
-  *ngIf="provision.bodacc && provision.provisionType && provision.provisionType.provisionScreenType.code==PROVISION_SCREEN_TYPE_BODACC">
+  *ngIf="provision && provision.bodacc && provision.provisionType && provision.provisionType.provisionScreenType.code==PROVISION_SCREEN_TYPE_BODACC">
 </bodacc-main>
 <formalite [formalite]="provision.formalite" [editMode]="editMode" [isStatusOpen]="isStatusOpen"
   [instanceOfCustomerOrder]="instanceOfCustomerOrder" [(provision)]="provision" (provisionChange)="noticeChange()"
-  *ngIf="provision.formalite && provision.provisionType && provision.provisionType.provisionScreenType.code==PROVISION_SCREEN_TYPE_FORMALITE && false">
+  *ngIf="provision && provision.formalite && provision.provisionType && provision.provisionType.provisionScreenType.code==PROVISION_SCREEN_TYPE_FORMALITE && false">
 </formalite>
 <simple-provision [simpleProvision]="provision.simpleProvision" [editMode]="editMode" [isStatusOpen]="isStatusOpen"
   [instanceOfCustomerOrder]="instanceOfCustomerOrder" [(provision)]="provision" (provisionChange)="noticeChange()"
-  *ngIf="provision.simpleProvision && provision.provisionType && provision.provisionType.provisionScreenType.code==PROVISION_SCREEN_TYPE_STANDARD">
+  *ngIf="provision && provision.simpleProvision && provision.provisionType && provision.provisionType.provisionScreenType.code==PROVISION_SCREEN_TYPE_STANDARD">
 </simple-provision>
