small improvments and various bugfixes

--- a/client/src/app/modules/quotation/components/add-debour/add-debour.component.html
+++ b/client/src/app/modules/quotation/components/add-debour/add-debour.component.html
@@ -1,4 +1,4 @@
-<div class="mat-elevation-z2 form-div" *ngIf="provision && newDebour">
+<div class="mat-elevation-z2 form-div" *ngIf="provision && newDebour && false">
   <form [formGroup]="debourForm">
     <div class="full-width" *ngIf="editMode">
       <table class="full-width">
