--- a/client/src/app/modules/accounting/components/accounting-record/accounting-record.component.html
+++ b/client/src/app/modules/accounting/components/accounting-record/accounting-record.component.html
@@ -17,6 +17,10 @@
           </select-accounting-journal>
         </td>
         <td>
+          <generic-toggle [(model)]="accountingRecordSearch.hideLettered" label="Cacher lettrées ?"
+            [form]="accountingRecordForm" propertyName="hideLettered"></generic-toggle>
+        </td>
+        <td>
           <generic-date-range-picker [(modelStart)]="accountingRecordSearch.startDate"
             [(modelEnd)]="accountingRecordSearch.endDate" label="Plage de recherche" [form]="accountingRecordForm"
             propertyNameStart="startDate" propertyNameEnd="endDate" (onDateChange)="putEndDateSameYear()">
