--- a/client/src/app/modules/quotation/components/add-debour/add-debour.component.html
+++ b/client/src/app/modules/quotation/components/add-debour/add-debour.component.html
@@ -1,4 +1,4 @@
-<div class="mat-elevation-z2 form-div" *ngIf="provision && newDebour && false">
+<div class="mat-elevation-z2 form-div" *ngIf="provision && newDebour ">
   <form [formGroup]="debourForm">
     <div class="full-width" *ngIf="editMode">
       <table class="full-width">
@@ -40,5 +40,16 @@
     </div>
   </form>
   <sort-table [refreshTable]="refreshTable" [columns]="displayedColumns" [values]="provision.debours"
-    tableName="Débours"></sort-table>
+    tableName="Débours" class="margin-bottom"></sort-table>
+  <div class="row-field-container margin-bottom">
+    <button mat-raised-button *ngIf="!editMode" (click)="associateToPayment()" color="primary"
+      class="mini-fab-add">Associer un paiement aux débours
+    </button>
+  </div>
+  <div *ngIf="provision.debours && provision.debours.length>0">
+    <p>Total par authorité compétente</p>
+    <ul *ngFor="let competentAuthority of getCompetentAuthorities()">
+      <li>{{competentAuthority.label}} : {{getTotalForCompetentAuthority(competentAuthority)}} €</li>
+    </ul>
+  </div>
 </div>
