--- a/client/src/app/modules/invoicing/components/associate-payment-dialog/associate-payment-dialog.component.html
+++ b/client/src/app/modules/invoicing/components/associate-payment-dialog/associate-payment-dialog.component.html
@@ -112,4 +112,46 @@
       </mat-step>
     </mat-vertical-stepper>
   </div>
+  <div class="big-chip" *ngIf="amountToPayCompletely()<0 && !isPaymentWayInbound(payment)">
+    <chips-status [value]="'Solde '+amountRemaining()+' €'"></chips-status>
+  </div>
+  <div *ngIf="amountToPayCompletely()<0 && !isPaymentWayInbound(payment)">
+    <mat-vertical-stepper [linear]="false" #stepper animationDuration="500">
+      <mat-step *ngIf="invoice">
+        <ng-template matStepLabel>Validation de l'association</ng-template>
+        <p>Validez-vous l'association présentée ci-dessus ?</p>
+        <div class="top">
+          <button mat-raised-button color="accent" (click)="onClose()">Annuler</button>
+          <button mat-raised-button color="warn" matStepperNext>Suivant</button>
+        </div>
+      </mat-step>
+      <mat-step>
+        <ng-template matStepLabel>Choix d'une facture suplémentaire</ng-template>
+        <p>Merci de choisir ci-dessous, la facture à associer avec ce solde.</p>
+        <invoice-list (actionBypass)="associateInvoice($event)" [overrideIconAction]="'merge_type'"
+          [overrideTooltipAction]="'Associer cette facture au paiement'"
+          [defaultStatusFilter]="[invoiceStatusSend]"></invoice-list>
+        <div class="top">
+          <button mat-raised-button color="accent" matStepperPrevious>Précédent</button>
+          <button mat-raised-button color="warn" matStepperNext>Suivant</button>
+        </div>
+      </mat-step>
+      <mat-step *ngIf="amountRemaining()!=0">
+        <ng-template matStepLabel>Solde</ng-template>
+        <p>Le solde n'est pas nul.
+        </p>
+        <div class="top">
+          <button mat-raised-button color="accent" matStepperPrevious>Précédent</button>
+        </div>
+      </mat-step>
+      <mat-step *ngIf="amountRemaining()==0">
+        <ng-template matStepLabel>Récapitulatif</ng-template>
+        <p>Validez-vous les associations présentées ci-dessus ?</p>
+        <div class="top">
+          <button mat-raised-button color="accent" matStepperPrevious>Précédent</button>
+          <button mat-raised-button color="warn" (click)="onConfirm()">Valider</button>
+        </div>
+      </mat-step>
+    </mat-vertical-stepper>
+  </div>
 </div>
