--- a/client/src/app/modules/invoicing/components/invoice-details/invoice-details.component.html
+++ b/client/src/app/modules/invoicing/components/invoice-details/invoice-details.component.html
@@ -68,7 +68,7 @@
                   (auxclick)="openRoute($event,'/referential/provider/'+invoice.provider.id)">visibility
                 </mat-icon></p>
               <p>IBAN : {{invoice.provider.iban}}</p>
-              <p>Compte fournissuer :
+              <p>Compte fournisseur :
                 {{invoice.provider.accountingAccountProvider.principalAccountingAccount.code+"-"+invoice.provider.accountingAccountProvider.accountingAccountSubNumber}}
               </p>
             </td>
@@ -243,11 +243,11 @@
       </div>
     </mat-tab>
     <mat-tab label="Associer un paiement"
-      *ngIf="getAmountRemaining(invoice)>0 && invoice.invoiceStatus.id==invoiceStatusSend.id">
+      *ngIf="getAmountRemaining(invoice)>0 && (invoice.invoiceStatus.id==invoiceStatusSend.id ||invoice.invoiceStatus.id==invoiceStatusReceived.id)">
       <invoice-payment (stateChanged)=" onStateChange()" [invoice]="invoice">
       </invoice-payment>
     </mat-tab>
-    <mat-tab label="Suivi" *ngIf="invoice.id">
+    <mat-tab label="Suivi" *ngIf="invoice.id && invoice.invoiceStatus.id==invoiceStatusSend.id ">
       <div>
         <ul>
           <li [ngClass]="{'color-warn':beforeToday(invoice.dueDate)}">Echéance de paiement : {{invoice.dueDate |
