--- a/client/src/app/modules/quotation/components/domiciliation/domiciliation.component.html
+++ b/client/src/app/modules/quotation/components/domiciliation/domiciliation.component.html
@@ -99,7 +99,7 @@
       <provision-options [editMode]="editMode" (provisionChange)="provisionChangeFunction()" [provision]="provision">
       </provision-options>
     </mat-tab>
-    <mat-tab label="Débours" *ngIf="instanceOfCustomerOrder">
+    <mat-tab label="Débours" *ngIf="instanceOfCustomerOrder && !isStatusOpen">
       <add-debour [editMode]="editMode" [(provision)]="provision">
       </add-debour>
     </mat-tab>
