--- a/client/src/app/modules/invoicing/components/invoicing/invoicing.component.html
+++ b/client/src/app/modules/invoicing/components/invoicing/invoicing.component.html
@@ -12,5 +12,8 @@
     <mat-tab label="Virements">
       <bank-transfer-list></bank-transfer-list>
     </mat-tab>
+    <mat-tab label="Prélèvements">
+      <direct-debit-transfer-list></direct-debit-transfer-list>
+    </mat-tab>
   </mat-tab-group>
 </div>
