OSI-590 Faire un tableau de suivi par équipe 1ere version qui affiche les entêtes

--- a/client/src/app/modules/dashboard/dashboard.component.html
+++ b/client/src/app/modules/dashboard/dashboard.component.html
@@ -51,6 +51,11 @@
           [isForDashboard]="true"></refund-list>
         <log class="dashboard-box-component" *ngIf="item==LOG_TO_REVIEW && canViewLogModule()" [isForDashboard]="true">
         </log>
+        <provision-board class="dashboard-box-component" *ngIf="item==BOARD_AL"
+        [currentEmployee]="currentEmployee" [teamBoard]="'AL'" ></provision-board>
+        <provision-board class="dashboard-box-component" *ngIf="item==BOARD_FORMALITE"
+        [currentEmployee]="currentEmployee" [teamBoard]="'FORMALITE'" ></provision-board>
+
       </div>
     </div>
   </div>
